--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,15 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
-    "module": "es2020",
+    "target": "es5",
+    "module": "esnext",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "esnext"
+    ],
+    "types": [
+      "node", "electron"
     ]
   },
   "angularCompilerOptions": {
