--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
-          "strict": true
+          "strict": false,
+          "style": "less",
+          "skipTests": true
         }
       },
       "root": "",
@@ -30,7 +32,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/normalize.css/normalize.css",
+              "src/styles.less"
             ],
             "scripts": []
           },
@@ -97,7 +100,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.less"
             ],
             "scripts": []
           }
