--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@types/node": "^15.3.1",
+    "ajv": "^6.9.1",
+    "ngx-markdown": "^12.0.1",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.2.15",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "@types/node": "^15.3.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
