--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod --base-href=./",
+    "build:stats": "ng build --prod --stats-json && npm run show:stats",
+    "show:stats": "webpack-bundle-analyzer ./dist/electron-angular/stats.json",
+    "el:build": "tsc electron/main.ts --outDir dist/electron",
+    "el:watch": "tcs electron/main.ts -w --outDir dist/electron",
+    "el:start": "npm run el:build && electron dist/electron/main.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,7 +32,8 @@
     "prismjs": "^1.23.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@types/node": "^15.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
@@ -46,6 +53,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "electron": "12.0.9"
   }
 }
